Created tests for GameEngine